Fix crash on split colspan frames (Bug 194330), r=karnaze@netscape.com, sr=kin@netscape.com